--- a/index.html
+++ b/index.html
@@ -53,7 +53,10 @@
       <!-- Exercise #5: DOM EVENTS -->
       <div class="exercise-container exercise5">
         <h2>EXERCISE 5</h2>
-        <button id="btn">View Modal</button>
+        <button id="btn" class="btn">View Modal</button>
+      </div>
+      <!-- <div id="modal" class="modal-card"> -->
+
       </div>
     </main>
   </body>
